--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+Cython==0.24.1
 Django==1.8.6
-MySQL-python==1.2.5
-sqlparse==0.1.15
 django-datetime-widget==0.9.3
 djangorestframework==3.3.1
+MySQL-python==1.2.5
+pytz==2016.6.1
+sqlparse==0.1.15
